--- a/tests/unit_tests/CMakeLists.txt
+++ b/tests/unit_tests/CMakeLists.txt
@@ -2,6 +2,7 @@ include_directories(${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR})
 
 add_executable(Unit_Tests_run
     test_example.cpp
+    test_dna.cpp
 )
 
 target_link_libraries(Unit_Tests_run gtest gtest_main)
