ENH: add count_digits

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,10 +3,11 @@ project(${CMAKE_PROJECT_NAME}_lib)
 set(HEADER_FILES
 )
 set(SOURCE_FILES
+    count_digits.cpp
     dna.cpp
 )
 
-if (EXISTS ${SOURCE_FILES})
+if (DEFINED SOURCE_FILES)
     # The library contains header and source files.
     add_library(${CMAKE_PROJECT_NAME}_lib STATIC
         ${SOURCE_FILES}
