--- a/tests/unit_tests/CMakeLists.txt
+++ b/tests/unit_tests/CMakeLists.txt
@@ -1,9 +1,10 @@
 include_directories(${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR})
 
 add_executable(Unit_Tests_run
-    test_example.cpp
-    test_dna.cpp
+    test_combine_strings.cpp
     test_count_digits.cpp
+    test_dna.cpp
+    test_example.cpp
 )
 
 target_link_libraries(Unit_Tests_run gtest gtest_main)
